// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input label label should have a htmlFor prop equals to the used id 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-3 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-4 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  transition-property: box-shadow;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-4[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-4[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-4[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-4:required {
  box-shadow: none;
}

.emotion-4:hover {
  border-color: #7A7B8E;
}

.emotion-4:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
}

.emotion-4:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-5 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #24252E;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-5::-webkit-input-placeholder {
  color: #696979;
}

.emotion-5::-moz-placeholder {
  color: #696979;
}

.emotion-5:-ms-input-placeholder {
  color: #696979;
}

.emotion-5::placeholder {
  color: #696979;
}

.emotion-5:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <label
          class="emotion-3"
          for="foo"
        >
          Foo
        </label>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-16-label"
          role="combobox"
        >
          <div
            class="emotion-4"
          >
            <input
              aria-autocomplete="list"
              class="emotion-5"
              id="downshift-16-input"
              placeholder="Select a value..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`input label should use aria-labelledby equals to an auto-assigned label id, if "id" is not provided 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-3 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-4 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  transition-property: box-shadow;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-4[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-4[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-4[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-4:required {
  box-shadow: none;
}

.emotion-4:hover {
  border-color: #7A7B8E;
}

.emotion-4:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
}

.emotion-4:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-5 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #24252E;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-5::-webkit-input-placeholder {
  color: #696979;
}

.emotion-5::-moz-placeholder {
  color: #696979;
}

.emotion-5:-ms-input-placeholder {
  color: #696979;
}

.emotion-5::placeholder {
  color: #696979;
}

.emotion-5:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <label
          class="emotion-3"
          id="label-abc"
        >
          test
        </label>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="label-abc"
          role="combobox"
        >
          <div
            class="emotion-4"
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="label-abc"
              class="emotion-5"
              id="downshift-17-input"
              placeholder="Select a value..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly when closed 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-3 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  transition-property: box-shadow;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-3[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-3[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-3[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-3:required {
  box-shadow: none;
}

.emotion-3:hover {
  border-color: #7A7B8E;
}

.emotion-3:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
}

.emotion-3:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-4 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #24252E;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-4::-webkit-input-placeholder {
  color: #696979;
}

.emotion-4::-moz-placeholder {
  color: #696979;
}

.emotion-4:-ms-input-placeholder {
  color: #696979;
}

.emotion-4::placeholder {
  color: #696979;
}

.emotion-4:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          role="combobox"
        >
          <div
            class="emotion-3"
          >
            <input
              aria-autocomplete="list"
              class="emotion-4"
              id="downshift-0-input"
              placeholder="Select a value..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly when opened 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-3 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  transition-property: box-shadow;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-3[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-3[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-3[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-3:required {
  box-shadow: none;
}

.emotion-3:hover {
  border-color: #7A7B8E;
}

.emotion-3:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
}

.emotion-3:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-4 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #24252E;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-4::-webkit-input-placeholder {
  color: #696979;
}

.emotion-4::-moz-placeholder {
  color: #696979;
}

.emotion-4:-ms-input-placeholder {
  color: #696979;
}

.emotion-4::placeholder {
  color: #696979;
}

.emotion-4:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2),0 1px 10px 0 rgba(0, 0, 0, 0.12),0 4px 5px 0 rgba(0, 0, 0, 0.14);
  max-height: 20rem;
}

.emotion-6 {
  list-style: none;
  margin: 0;
  padding: 0;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2),0 1px 10px 0 rgba(0, 0, 0, 0.12),0 4px 5px 0 rgba(0, 0, 0, 0.14);
  max-height: 20rem;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
  z-index: 1300;
  z-index: auto;
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
}

.emotion-7 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-7:last-of-type {
  border-bottom: none;
}

.emotion-7:hover {
  background: #F0F0F5;
}

.emotion-7:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content, max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

.emotion-10 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-10:hover+.emotion-11 {
  border-color: #7A7B8E;
}

.emotion-10:checked+.emotion-11 {
  background-color: #0069D0;
  border-color: #0069D0;
}

.emotion-10:checked+.emotion-11:after {
  content: "";
  border-right: 2px solid #FFFFFF;
  border-bottom: 2px solid #FFFFFF;
  position: absolute;
  width: 8px;
  height: 16px;
  top: 0;
  left: 7px;
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -moz-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-10:indeterminate+.emotion-11 {
  background-color: #FFFFFF;
  border-color: #0069D0;
}

.emotion-10:indeterminate+.emotion-11:after {
  content: "";
  border-bottom: 3px solid #0069D0;
  position: absolute;
  top: -1px;
  left: 4px;
  width: 14px;
  height: 14px;
  opacity: 1;
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-10:focus+.emotion-11 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-10:disabled+.emotion-11 {
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-10:disabled+.emotion-11+.css-1f2k2gl {
  color: #AAAAB9;
  cursor: not-allowed;
}

.emotion-11 {
  background-color: #FFFFFF;
  border: 1px solid #8F8FA2;
  border-radius: 2px;
  display: inline-block;
  height: 24px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 24px;
  min-width: 24px;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="downshift-1-label"
          aria-owns="downshift-1-menu"
          role="combobox"
        >
          <div
            class="emotion-3"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-1-menu"
              class="emotion-4"
              id="downshift-1-input"
              placeholder="Select a value..."
              type="text"
              value=""
            />
          </div>
          <div
            aria-labelledby="downshift-1-label"
            class="emotion-5"
            id="downshift-1-menu"
            role="listbox"
            style="position: absolute; left: 0px; top: 0px; width: 0px;"
          >
            <ul
              class="emotion-6"
            >
              <li
                aria-selected="false"
                class="emotion-7"
                id="downshift-1-item-0"
                role="option"
              >
                <div
                  class="emotion-8"
                >
                  <label
                    class="emotion-9"
                  >
                    <input
                      class="emotion-10"
                      readonly=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="emotion-11"
                    />
                  </label>
                  Apple
                </div>
              </li>
              <li
                aria-selected="false"
                class="emotion-7"
                id="downshift-1-item-1"
                role="option"
              >
                <div
                  class="emotion-8"
                >
                  <label
                    class="emotion-9"
                  >
                    <input
                      class="emotion-10"
                      readonly=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="emotion-11"
                    />
                  </label>
                  Banana
                </div>
              </li>
              <li
                aria-selected="false"
                class="emotion-7"
                id="downshift-1-item-2"
                role="option"
              >
                <div
                  class="emotion-8"
                >
                  <label
                    class="emotion-9"
                  >
                    <input
                      class="emotion-10"
                      readonly=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="emotion-11"
                    />
                  </label>
                  Grape
                </div>
              </li>
              <li
                aria-selected="false"
                class="emotion-7"
                id="downshift-1-item-3"
                role="option"
              >
                <div
                  class="emotion-8"
                >
                  <label
                    class="emotion-9"
                  >
                    <input
                      class="emotion-10"
                      readonly=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="emotion-11"
                    />
                  </label>
                  Orange
                </div>
              </li>
              <li
                aria-selected="false"
                class="emotion-7"
                id="downshift-1-item-4"
                role="option"
              >
                <div
                  class="emotion-8"
                >
                  <label
                    class="emotion-9"
                  >
                    <input
                      class="emotion-10"
                      readonly=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="emotion-11"
                    />
                  </label>
                  Pear
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
